recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: value step
	setCouleur(current(step))
                           ^Tree:13: error: not found: value gauch
		gauch(angle:Double)
                ^